--- a/client/src/components/Shop/Shop.css
+++ b/client/src/components/Shop/Shop.css
@@ -6,3 +6,8 @@
     flex-direction: column;    
     margin-top: 5rem;
 }
+
+/* Dark mode: black background for shop container */
+.dark-mode .shop__contianer {
+    background-color: #000000;
+}
